# Projet_MLops

./: Dockerfile  Makefile  README.md  app-deployment.yaml  app.py  docker-compose.yml  pyproject.toml
