[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Bagot Alexis <alexis.bagot@epita.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.0.0"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
